--- a/01-express-npm/public/styles.css
+++ b/01-express-npm/public/styles.css
@@ -1,3 +1,43 @@
 body{
-    background: gray;
+    background: #eee;
+    display: flex;
+}
+
+.site-wrap{
+    width:400px;
+    height:400px;
+    margin:auto;
+    border: 5px solid #aaa;
+    display: flex;
+    flex-direction: column;
+}
+
+.site-wrap .chat-list{
+    flex-grow: 1;
+    display: flex;
+    font-size: 10pt;
+}
+
+.site-wrap .chat-list ul{
+    flex-grow: 1;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll;
+}
+
+.site-wrap .chat-list ul li{
+    border-bottom:1px solid #aaa;
+    margin: 0;
+    padding: 5px;
+}
+
+.site-wrap .chat-form{
+    border-top: 5px solid #aaa;
+}
+
+site-wrap .chat-form input{
+    padding: 5px;
+    width:100%;
+    box-sizing: border-box;
 }
