--- a/02-app/src/client/app.scss
+++ b/02-app/src/client/app.scss
@@ -1,6 +1,7 @@
 body{
-  background: url('./images/earth.jpg') repeat;
+  /*background: url('./images/earth.jpg') repeat;*/
   h1{
+    font-size: 10px;
     color: red;
   }
 }
