--- a/02-app/views/index.jade
+++ b/02-app/views/index.jade
@@ -6,6 +6,25 @@ html
         link(res="stylesheet", href='/build/app.css')
 
     body
-        h1 Helo
+
+        .site-wrap
+            .column.left
+                section.playlist
+                    h1
+                        i.fa.fa-circle-o-notch.fa-spin
+            .column.center
+                section.player
+                    h1
+                        i.fa.fa-circle-o-notch.fa-spin
+                section.chat
+                    h1
+                        i.fa.fa-circle-o-notch.fa-spin
+            .column.right
+                section.users
+                    h1
+                        i.fa.fa-circle-o-notch.fa-spin
+
+
+
         script(src="/build/vendor.js")
         script(src="/build/app.js")
